--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -16,20 +16,10 @@
     "logout": "Wyloguj się",
     "about": "O AdventureLog",
     "documentation": "Dokumentacja",
-    "discord": "Discord",
     "language_selection": "Wybór języka",
     "support": "Wsparcie",
     "theme_selection": "Wybór motywu",
-    "themes": {
-      "light": "Jasny",
-      "dark": "Ciemny",
-      "night": "Nocny",
-      "forest": "Leśny",
-      "aestheticLight": "Estetyczny Jasny",
-      "aestheticDark": "Estetyczny Ciemny",
-      "aqua": "Aqua",
-      "northernLights": "Zorza Polarna"
-    },
+    "themes": {},
     "calendar": "Kalendarz",
     "admin_panel": "Panel administracyjny"
   },
@@ -74,9 +64,7 @@
     "not_found": "Podróż nie znaleziona",
     "not_found_desc": "Podróży, której szukasz, nie można znaleźć. Spróbuj poszukać innej podróży lub sprawdź później.",
     "homepage": "Strona główna",
-    "adventure_details": "Szczegóły podróży",
     "collection": "Kolekcja",
-    "adventure_type": "Typ podróży",
     "longitude": "Długość geograficzna",
     "latitude": "Szerokość geograficzna",
     "visit": "Odwiedź",
@@ -98,9 +86,7 @@
     "date_constrain": "Ogranicz do dat kolekcji",
     "rating": "Ocena",
     "my_images": "Moje obrazy",
-    "add_an_activity": "Dodaj aktywność",
     "no_images": "Brak obrazów",
-    "upload_images_here": "Prześlij obrazy tutaj",
     "share_adventure": "Podziel się tą podróżą!",
     "copy_link": "Kopiuj link",
     "image": "Obraz",
@@ -115,7 +101,6 @@
     "add": "Dodaj",
     "save_next": "Zapisz i następny",
     "end_date": "Data zakończenia",
-    "my_visits": "Moje wizyty",
     "start_date": "Data rozpoczęcia",
     "remove": "Usuń",
     "location": "Lokalizacja",
@@ -135,11 +120,9 @@
     "filter": "Filtr",
     "category_filter": "Filtr kategorii",
     "category": "Kategoria",
-    "select_adventure_category": "Wybierz kategorię podróży",
     "clear": "Wyczyść",
     "my_collections": "Moje kolekcje",
     "open_filters": "Otwórz filtry",
-    "close_filters": "Zamknij filtry",
     "archived_collections": "Zarchiwizowane kolekcje",
     "share": "Podziel się",
     "private": "Prywatne",
@@ -170,13 +153,10 @@
     "dates": "Daty",
     "wiki_image_error": "Błąd podczas pobierania obrazu z Wikipedii",
     "start_before_end_error": "Data rozpoczęcia musi być przed datą zakończenia",
-    "activity": "Aktywność",
     "actions": "Akcje",
-    "no_end_date": "Proszę podać datę zakończenia",
     "see_adventures": "Zobacz podróże",
     "image_fetch_failed": "Nie udało się pobrać obrazu",
     "no_location": "Proszę podać lokalizację",
-    "no_start_date": "Proszę podać datę rozpoczęcia",
     "no_description_found": "Nie znaleziono opisu",
     "adventure_created": "Podróż została utworzona",
     "adventure_create_error": "Nie udało się stworzyć podróży",
@@ -188,7 +168,6 @@
     "basic_information": "Podstawowe informacje",
     "adventure_not_found": "Brak podróży do wyświetlenia. Dodaj je za pomocą przycisku plus w prawym dolnym rogu lub spróbuj zmienić filtry!",
     "no_adventures_found": "Brak podróży",
-    "mark_region_as_visited": "Oznaczyć region {region}, {country} jako odwiedzony?",
     "mark_visited": "Oznacz jako odwiedzone",
     "error_updating_regions": "Błąd podczas aktualizacji regionów",
     "regions_updated": "Regiony zaktualizowane",
@@ -214,30 +193,7 @@
     "itineary_by_date": "Plan podróży według daty",
     "nothing_planned": "Nic nie zaplanowane na ten dzień. Ciesz się podróżą!",
     "days": "dni",
-    "activities": {
-      "general": "Ogólne 🌍",
-      "outdoor": "Na świeżym powietrzu 🏞️",
-      "lodging": "Zakwaterowanie 🛌",
-      "dining": "Posiłki 🍽️",
-      "activity": "Aktywność 🏄",
-      "attraction": "Atrakcje 🎢",
-      "shopping": "Zakupy 🛍️",
-      "nightlife": "Życie nocne 🌃",
-      "event": "Wydarzenie 🎉",
-      "transportation": "Transport 🚗",
-      "culture": "Kultura 🎭",
-      "water_sports": "Sporty wodne 🚤",
-      "hiking": "Wędrówki 🥾",
-      "wildlife": "Dzika przyroda 🦒",
-      "historical_sites": "Miejsca historyczne 🏛️",
-      "music_concerts": "Muzyka i koncerty 🎶",
-      "fitness": "Fitness 🏋️",
-      "art_museums": "Sztuka i muzea 🎨",
-      "festivals": "Festiwale 🎪",
-      "spiritual_journeys": "Podróże duchowe 🧘‍♀️",
-      "volunteer_work": "Praca wolontariacka 🤝",
-      "other": "Inne"
-    },
+    "activities": {},
     "copied_to_clipboard": "Skopiowano do schowka!",
     "copy_failed": "Kopiowanie nie powiodło się",
     "adventure_calendar": "Kalendarz przygód",
@@ -265,7 +221,6 @@
     "starting_airport": "Początkowe lotnisko",
     "to": "Do",
     "transportation_delete_confirm": "Czy na pewno chcesz usunąć ten transport? \nTej akcji nie można cofnąć.",
-    "show_map": "Pokaż mapę",
     "will_be_marked": "zostanie oznaczona jako odwiedzona po zapisaniu przygody.",
     "cities_updated": "miasta zaktualizowane",
     "create_adventure": "Stwórz przygodę",
@@ -281,10 +236,7 @@
     "attachments": "Załączniki",
     "gpx_tip": "Przesyłaj pliki GPX do załączników, aby wyświetlić je na mapie!",
     "images": "Obrazy",
-    "primary": "Podstawowy",
     "upload": "Wgrywać",
-    "view_attachment": "Zobacz załącznik",
-    "of": "z",
     "city": "Miasto",
     "delete_lodging": "Usunąć zakwaterowanie",
     "display_name": "Nazwa wyświetlania",
@@ -295,16 +247,13 @@
     "price": "Cena",
     "region": "Region",
     "reservation_number": "Numer rezerwacji",
-    "welcome_map_info": "Publiczne przygody na tym serwerze",
     "open_in_maps": "Otwarte w mapach",
     "all_day": "Cały dzień",
     "collection_no_start_end_date": "Dodanie daty rozpoczęcia i końca do kolekcji odblokuje funkcje planowania planu podróży na stronie kolekcji.",
     "date_itinerary": "Trasa daty",
     "no_ordered_items": "Dodaj przedmioty z datami do kolekcji, aby je zobaczyć tutaj.",
     "ordered_itinerary": "Zamówiono trasę",
-    "additional_info": "Dodatkowe informacje",
     "invalid_date_range": "Niepoprawny zakres dat",
-    "sunrise_sunset": "Wschód słońca",
     "timezone": "Strefa czasowa",
     "no_visits": "Brak wizyt",
     "arrival_timezone": "Strefa czasowa przyjazdu",
@@ -334,14 +283,12 @@
     "all_subregions": "Wszystkie podregiony",
     "clear_search": "Wyczyść wyszukiwanie",
     "no_countries_found": "Nie znaleziono krajów",
-    "all_visited": "Odwiedziłeś wszystkie regiony w",
     "cities": "miasta",
     "failed_to_mark_visit": "Nie udało się oznaczyć wizyty w",
     "failed_to_remove_visit": "Nie udało się usunąć wizyty w",
     "marked_visited": "oznaczone jako odwiedzone",
     "no_cities_found": "Nie znaleziono żadnych miast",
     "region_failed_visited": "Nie udało się oznaczyć regionu jako odwiedzony",
-    "region_stats": "Statystyki regionu",
     "regions_in": "Regiony w",
     "removed": "REMOVED",
     "view_cities": "Zobacz Miasta",
@@ -363,10 +310,7 @@
     "profile_picture": "Zdjęcie profilowe",
     "public_profile": "Publiczny profil",
     "public_tooltip": "Dzięki publicznemu profilowi użytkownicy mogą dzielić się z Tobą kolekcjami i oglądać Twój profil na stronie użytkowników.",
-    "email_required": "Adres e-mail jest wymagany",
-    "both_passwords_required": "Obydwa hasła są wymagane",
     "new_password": "Nowe hasło",
-    "reset_failed": "Nie udało się zresetować hasła",
     "or_3rd_party": "Lub zaloguj się za pomocą usługi strony trzeciej",
     "no_public_adventures": "Nie znaleziono publicznych przygód",
     "no_public_collections": "Nie znaleziono publicznych kolekcji",
@@ -386,31 +330,21 @@
     "new_password": "Nowe hasło",
     "confirm_new_password": "Potwierdź nowe hasło",
     "email_change": "Zmień adres e-mail",
-    "current_email": "Aktualny adres e-mail",
     "no_email_set": "Brak ustawionego adresu e-mail",
     "new_email": "Nowy adres e-mail",
     "change_password": "Zmień hasło",
-    "login_redir": "Zostaniesz przekierowany na stronę logowania.",
-    "token_required": "Token i UID są wymagane do resetowania hasła.",
     "reset_password": "Resetuj hasło",
     "possible_reset": "Jeśli podany adres e-mail jest powiązany z kontem, otrzymasz wiadomość e-mail z instrukcjami resetowania hasła!",
-    "missing_email": "Proszę podać adres e-mail",
-    "submit": "Wyślij",
-    "password_does_not_match": "Hasła nie pasują do siebie",
-    "password_is_required": "Hasło jest wymagane",
-    "invalid_token": "Token jest nieprawidłowy lub wygasł",
     "about_this_background": "O tym tle",
     "photo_by": "Zdjęcie autorstwa",
     "join_discord": "Dołącz do Discorda",
     "join_discord_desc": "aby podzielić się swoimi zdjęciami. Zamieść je w kanale #travel-share.",
-    "change_password_error": "Nie można zmienić hasła. \nNieprawidłowe bieżące hasło lub nieprawidłowe nowe hasło.",
     "current_password": "Aktualne hasło",
     "password_change_lopout_warning": "Po zmianie hasła nastąpi wylogowanie.",
     "authenticator_code": "Kod uwierzytelniający",
     "copy": "Kopia",
     "disable_mfa": "Wyłącz usługę MFA",
     "email_added": "Adres e-mail został pomyślnie dodany!",
-    "email_added_error": "Błąd podczas dodawania adresu e-mail",
     "email_removed": "E-mail został pomyślnie usunięty!",
     "email_removed_error": "Błąd podczas usuwania wiadomości e-mail",
     "email_set_primary": "Adres e-mail został pomyślnie ustawiony jako podstawowy!",
@@ -420,16 +354,12 @@
     "email_verified_error": "Błąd podczas weryfikacji adresu e-mail",
     "email_verified_success": "Twój e-mail został zweryfikowany. \nMożesz się teraz zalogować.",
     "enable_mfa": "Włącz usługę MFA",
-    "error_change_password": "Błąd podczas zmiany hasła. \nSprawdź swoje aktualne hasło i spróbuj ponownie.",
     "generic_error": "Wystąpił błąd podczas przetwarzania Twojego żądania.",
-    "invalid_code": "Nieprawidłowy kod MFA",
-    "invalid_credentials": "Nieprawidłowa nazwa użytkownika lub hasło",
     "make_primary": "Ustaw jako podstawowy",
     "mfa_disabled": "Uwierzytelnianie wieloskładnikowe zostało pomyślnie wyłączone!",
     "mfa_enabled": "Uwierzytelnianie wieloskładnikowe zostało pomyślnie włączone!",
     "mfa_not_enabled": "Usługa MFA nie jest włączona",
     "mfa_page_title": "Uwierzytelnianie wieloskładnikowe",
-    "mfa_required": "Wymagane jest uwierzytelnianie wieloskładnikowe",
     "no_emai_set": "Nie ustawiono adresu e-mail",
     "not_verified": "Nie zweryfikowano",
     "primary": "Podstawowy",
@@ -440,25 +370,13 @@
     "verify": "Zweryfikować",
     "verify_email_error": "Błąd podczas weryfikacji adresu e-mail. \nSpróbuj ponownie za kilka minut.",
     "verify_email_success": "Weryfikacja e-mailowa została wysłana pomyślnie!",
-    "add_email_blocked": "Nie można dodać adresu e-mail do konta chronionego uwierzytelnianiem dwuskładnikowym.",
-    "required": "To pole jest wymagane",
-    "csrf_failed": "Nie udało się pobrać tokena CSRF",
-    "duplicate_email": "Ten adres e-mail jest już używany.",
-    "email_taken": "Ten adres e-mail jest już używany.",
-    "username_taken": "Ta nazwa użytkownika jest już używana.",
-    "administration_settings": "Ustawienia administracyjne",
     "documentation_link": "Link do dokumentacji",
     "launch_account_connections": "Uruchom Połączenia kont",
     "launch_administration_panel": "Uruchom Panel administracyjny",
     "no_verified_email_warning": "Aby włączyć uwierzytelnianie dwuskładnikowe, musisz mieć zweryfikowany adres e-mail.",
     "social_auth_desc": "Włącz lub wyłącz dostawców uwierzytelniania społecznościowego i OIDC dla swojego konta. \nPołączenia te umożliwiają logowanie się za pośrednictwem dostawców tożsamości uwierzytelniających, takich jak Authentik, lub dostawców zewnętrznych, takich jak GitHub.",
     "social_auth_desc_2": "Ustawienia te są zarządzane na serwerze AdventureLog i muszą zostać włączone ręcznie przez administratora.",
-    "social_oidc_auth": "Uwierzytelnianie społecznościowe i OIDC",
     "add_email": "Dodaj e-mail",
-    "password_too_short": "Hasło musi mieć co najmniej 6 znaków",
-    "disable_password": "Wyłącz hasło",
-    "password_disable": "Wyłącz uwierzytelnianie hasła",
-    "password_disable_desc": "Wyłączenie uwierzytelniania hasła uniemożliwia logowanie hasłem. \nAby się zalogować, będziesz musiał użyć dostawcy społeczności lub OIDC. Jeśli dostawca społecznościowy zostanie niezbędny, uwierzytelnianie hasła zostanie automatycznie ponowne odnowione, nawet jeśli to ustawienie zostanie wyłączone.",
     "password_disable_warning": "Obecnie uwierzytelnianie hasła jest wyłączone. \nWymagane jest zalogowanie się za pośrednictwem dostawcy społeczności lub OIDC.",
     "password_disabled": "Uwierzytelnianie hasła wyłączone",
     "password_disabled_error": "Błąd wyłączający uwierzytelnianie hasła. \nUpewnij się, że dostawca społecznościowy lub OIDC jest powiązany z Twoim kontem.",
@@ -477,7 +395,6 @@
     "advanced_settings_desc": "Zaawansowane narzędzia konfiguracyjne i programistyczne",
     "all_rights_reserved": "Wszelkie prawa zastrzeżone.",
     "app_version": "Wersja aplikacji",
-    "confirm_new_password_desc": "Potwierdź nowe hasło",
     "connected": "Połączony",
     "debug_information": "Informacje o debugowaniu",
     "disabled": "Wyłączony",
@@ -514,8 +431,7 @@
     "social_auth_desc_1": "Zarządzaj opcjami logowania społecznościowego i ustawieniami haseł",
     "social_auth_setup": "Konfiguracja uwierzytelniania społecznego",
     "staff_status": "Status personelu",
-    "staff_user": "Użytkownik personelu",
-    "email_verified_error_desc": "Twój e -mail nie można zweryfikować. \nSpróbuj ponownie."
+    "staff_user": "Użytkownik personelu"
   },
   "collection": {
     "collection_created": "Kolekcja została pomyślnie utworzona!",
@@ -524,7 +440,6 @@
     "create": "Utwórz",
     "collection_edit_success": "Kolekcja została pomyślnie edytowana!",
     "error_editing_collection": "Błąd podczas edytowania kolekcji",
-    "edit_collection": "Edytuj kolekcję",
     "public_collection": "Kolekcja publiczna",
     "manage_collections": "Zarządzaj kolekcjami"
   },
@@ -545,31 +460,20 @@
   "checklist": {
     "checklist_deleted": "Lista kontrolna została pomyślnie usunięta!",
     "checklist_delete_error": "Błąd podczas usuwania listy kontrolnej",
-    "failed_to_save": "Nie udało się zapisać listy kontrolnej",
     "checklist_editor": "Edytor listy kontrolnej",
-    "editing_checklist": "Edytowanie listy kontrolnej",
     "item": "Element",
     "items": "Elementy",
-    "add_item": "Dodaj element",
     "new_item": "Nowy element",
-    "save": "Zapisz",
     "checklist_public": "Ta lista kontrolna jest publiczna, ponieważ znajduje się w publicznej kolekcji.",
     "item_cannot_be_empty": "Element nie może być pusty",
     "item_already_exists": "Element już istnieje",
-    "checklist_viewer": "Przeglądarka listy kontrolnej",
     "new_checklist": "Nowa lista kontrolna"
   },
   "transportation": {
     "transportation_deleted": "Transport został pomyślnie usunięty!",
     "transportation_delete_error": "Błąd podczas usuwania transportu",
-    "provide_start_date": "Proszę podać datę rozpoczęcia",
-    "transport_type": "Typ transportu",
     "type": "Typ",
-    "transportation_added": "Transport został pomyślnie dodany!",
-    "error_editing_transportation": "Błąd podczas edytowania transportu",
     "new_transportation": "Nowy transport",
-    "date_time": "Data i godzina rozpoczęcia",
-    "end_date_time": "Data i godzina zakończenia",
     "flight_number": "Numer lotu",
     "from_location": "Miejsce początkowe",
     "to_location": "Miejsce docelowe",
@@ -584,10 +488,7 @@
       "walking": "Pieszo",
       "other": "Inne"
     },
-    "transportation_edit_success": "Transport edytowany pomyślnie!",
     "edit_transportation": "Edytuj transport",
-    "start": "Początek",
-    "date_and_time": "Data i godzina",
     "ending_airport_desc": "Wprowadź końcowe kod lotniska (np. LAX)",
     "fetch_location_information": "Pobierać informacje o lokalizacji",
     "starting_airport_desc": "Wprowadź początkowy kod lotniska (np. JFK)"
@@ -634,7 +535,6 @@
     "update_after_refresh": "Karty podróży zostaną zaktualizowane po odświeżeniu strony.",
     "select_category": "Wybierz kategorię",
     "category_name": "Nazwa kategorii",
-    "add_category": "Dodaj kategorię",
     "add_new_category": "Dodaj nową kategorię"
   },
   "dashboard": {
@@ -651,25 +551,14 @@
     "api_key": "Klucz API Immicha",
     "api_note": "Uwaga: musi to być adres URL serwera API Immich, więc prawdopodobnie kończy się na /api, chyba że masz niestandardową konfigurację.",
     "disable": "Wyłączyć",
-    "enable_immich": "Włącz Immicha",
     "immich": "Immich",
-    "immich_enabled": "Integracja z Immich została pomyślnie włączona!",
     "immich_error": "Błąd podczas aktualizacji integracji Immich",
-    "immich_integration": "Integracja Immicha",
-    "immich_updated": "Ustawienia Immich zostały pomyślnie zaktualizowane!",
-    "integration_enabled": "Integracja włączona",
     "integration_fetch_error": "Błąd podczas pobierania danych z integracji Immich",
-    "integration_missing": "W backendie brakuje integracji z Immich",
     "load_more": "Załaduj więcej",
     "no_items_found": "Nie znaleziono żadnych elementów",
-    "query_required": "Zapytanie jest wymagane",
-    "server_down": "Serwer Immich jest obecnie wyłączony lub nieosiągalny",
     "server_url": "Adres URL serwera Immich",
     "update_integration": "Zaktualizuj integrację",
-    "imageid_required": "Wymagany jest identyfikator obrazu",
-    "immich_desc": "Zintegruj swoje konto Immich z AdventureLog, aby móc przeszukiwać bibliotekę zdjęć i importować zdjęcia do swoich przygód.",
     "immich_disabled": "Integracja z Immich została pomyślnie wyłączona!",
-    "documentation": "Dokumentacja integracji Immicha",
     "localhost_note": "Uwaga: localhost najprawdopodobniej nie będzie działać, jeśli nie skonfigurujesz odpowiednio sieci dokerów. \nZalecane jest użycie adresu IP serwera lub nazwy domeny.",
     "api_key_placeholder": "Wprowadź swój klucz API IMMICH",
     "enable_integration": "Włącz integrację",
@@ -685,15 +574,10 @@
     "validation_error": "Wystąpił błąd podczas walidacji integracji immicha. \nSprawdź swój adres URL serwera i klawisz API."
   },
   "recomendations": {
-    "address": "Adres",
-    "contact": "Kontakt",
-    "phone": "Telefon",
     "recommendation": "Zalecenie",
-    "website": "Strona internetowa",
     "recommendations": "Zalecenia",
     "adventure_recommendations": "Zalecenia przygodowe",
     "food": "Żywność",
-    "miles": "Mil",
     "tourism": "Turystyka"
   },
   "lodging": {
@@ -701,30 +585,17 @@
     "bnb": "Nocleg i śniadanie",
     "cabin": "Kabina",
     "campground": "Obozowisko",
-    "lodging_added": "Lodowanie dodane pomyślnie!",
-    "lodging_delete_error": "Usuwanie błędów",
-    "lodging_deleted": "Z powodzeniem usunięto!",
-    "lodging_edit_success": "Złożone zredagowane zredagowane!",
-    "lodging_type": "Typ składowania",
     "motel": "Motel",
-    "start": "Start",
-    "type": "Typ",
     "villa": "Willa",
-    "check_in": "Zameldować się",
-    "check_out": "Wymeldować się",
-    "date_and_time": "Data",
     "edit": "Redagować",
     "edit_lodging": "Edytuj zakwaterowanie",
-    "error_editing_lodging": "Edycja błędów",
     "hostel": "Schronisko",
     "hotel": "Hotel",
     "house": "Dom",
     "new_lodging": "Nowe zakwaterowanie",
     "other": "Inny",
-    "provide_start_date": "Proszę podać datę rozpoczęcia",
     "reservation_number": "Numer rezerwacji",
-    "resort": "Uciec",
-    "current_timezone": "Obecna strefa czasowa"
+    "resort": "Uciec"
   },
   "google_maps": {
     "google_maps_integration_desc": "Połącz swoje konto Google Maps, aby uzyskać wysokiej jakości wyniki wyszukiwania i zalecenia dotyczące lokalizacji."
