--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -12,36 +12,11 @@
     "generic_attributions": "Logga in på AdventureLog för att visa attribut för aktiverade integrationer och tjänster."
   },
   "adventures": {
-    "activities": {
-      "activity": "Aktivitet 🏄",
-      "art_museums": "Konst",
-      "attraction": "Attraktion 🎢",
-      "culture": "Kultur 🎭",
-      "dining": "Mat 🍽️",
-      "event": "Event 🎉",
-      "festivals": "Festivaler 🎪",
-      "fitness": "Fitness 🏋️",
-      "general": "Allmänt 🌍",
-      "hiking": "Vandring 🥾",
-      "historical_sites": "Historiska platser 🏛️",
-      "lodging": "Logi 🛌",
-      "music_concerts": "Musik",
-      "nightlife": "Nattliv 🌃",
-      "other": "Andra",
-      "outdoor": "Utomhus 🏞️",
-      "shopping": "Shopping 🛍️",
-      "spiritual_journeys": "Andliga resor 🧘‍♀️",
-      "transportation": "Transport 🚗",
-      "volunteer_work": "Volontärarbete 🤝",
-      "water_sports": "Vattensporter 🚤",
-      "wildlife": "Vilda djur 🦒"
-    },
+    "activities": {},
     "add_to_collection": "Lägg till i samlingen",
     "adventure": "Äventyr",
     "adventure_delete_confirm": "Är du säker på att du vill ta bort det här äventyret? \nDenna åtgärd kan inte ångras.",
     "adventure_delete_success": "Äventyret har raderats!",
-    "adventure_details": "Äventyrsdetaljer",
-    "adventure_type": "Äventyrstyp",
     "archive": "Arkiv",
     "archived": "Arkiverad",
     "archived_collection_message": "Samlingen har arkiverats!",
@@ -50,7 +25,6 @@
     "cancel": "Avboka",
     "category_filter": "Kategorifilter",
     "clear": "Rensa",
-    "close_filters": "Stäng filter",
     "collection": "Samling",
     "collection_adventures": "Inkludera samlingsäventyr",
     "collection_link_error": "Det gick inte att länka äventyr till samling",
@@ -105,10 +79,8 @@
     "updated": "Uppdaterad",
     "wiki_image_error": "Det gick inte att hämta bilden från Wikipedia",
     "actions": "Åtgärder",
-    "activity": "Aktivitet",
     "activity_types": "Aktivitetstyper",
     "add": "Tillägga",
-    "add_an_activity": "Lägg till en aktivitet",
     "add_notes": "Lägg till anteckningar",
     "adventure_create_error": "Det gick inte att skapa äventyr",
     "adventure_created": "Äventyr skapat",
@@ -129,31 +101,26 @@
     "location": "Plats",
     "location_information": "Platsinformation",
     "my_images": "Mina bilder",
-    "my_visits": "Mina besök",
     "new_adventure": "Nytt äventyr",
     "no_description_found": "Ingen beskrivning hittades",
     "no_images": "Inga bilder",
     "no_location": "Vänligen ange en plats",
     "no_results": "Inga resultat hittades",
-    "no_start_date": "Ange ett startdatum",
     "public_adventure": "Offentligt äventyr",
     "remove": "Ta bort",
     "save_next": "Spara",
     "search_for_location": "Sök efter en plats",
     "search_results": "Sökresultat",
     "see_adventures": "Se äventyr",
-    "select_adventure_category": "Välj äventyrskategori",
     "share_adventure": "Dela detta äventyr!",
     "start_date": "Startdatum",
     "upload_image": "Ladda upp bild",
-    "upload_images_here": "Ladda upp bilder här",
     "url": "URL",
     "warning": "Varning",
     "wiki_desc": "Hämtar utdrag från Wikipedia-artikeln som matchar äventyrets namn.",
     "adventure_not_found": "Det finns inga äventyr att visa upp. \nLägg till några med hjälp av plusknappen längst ner till höger eller prova att byta filter!",
     "all": "Alla",
     "error_updating_regions": "Fel vid uppdatering av regioner",
-    "mark_region_as_visited": "Markera region {region}, {country} som besökt?",
     "mark_visited": "Markera som besökt",
     "my_adventures": "Mina äventyr",
     "no_adventures_found": "Inga äventyr hittades",
@@ -178,7 +145,6 @@
     "link_new": "Länk Ny...",
     "linked_adventures": "Länkade äventyr",
     "links": "Länkar",
-    "no_end_date": "Ange ett slutdatum",
     "note": "Notera",
     "notes": "Anteckningar",
     "nothing_planned": "Inget planerat för denna dag. \nNjut av resan!",
@@ -217,7 +183,6 @@
     "starting_airport": "Startar flygplats",
     "to": "Till",
     "transportation_delete_confirm": "Är du säker på att du vill ta bort denna transport? \nDenna åtgärd kan inte ångras.",
-    "show_map": "Visa karta",
     "will_be_marked": "kommer att markeras som besökt när äventyret har sparats.",
     "cities_updated": "städer uppdaterade",
     "create_adventure": "Skapa äventyr",
@@ -233,16 +198,12 @@
     "attachments": "Bilagor",
     "gpx_tip": "Ladda upp GPX-filer till bilagor för att se dem på kartan!",
     "images": "Bilder",
-    "primary": "Primär",
     "upload": "Ladda upp",
-    "view_attachment": "Visa bilaga",
-    "of": "av",
     "city": "Stad",
     "delete_lodging": "Ta bort logi",
     "display_name": "Visningsnamn",
     "location_details": "Platsinformation",
     "lodging": "Logi",
-    "welcome_map_info": "Offentliga äventyr på denna server",
     "lodging_delete_confirm": "Är du säker på att du vill ta bort den här logiplatsen? \nDenna åtgärd kan inte ångras.",
     "lodging_information": "Logi information",
     "price": "Pris",
@@ -254,9 +215,7 @@
     "date_itinerary": "Datum resplan",
     "no_ordered_items": "Lägg till objekt med datum i samlingen för att se dem här.",
     "ordered_itinerary": "Beställd resplan",
-    "additional_info": "Ytterligare information",
     "invalid_date_range": "Ogiltigt datumintervall",
-    "sunrise_sunset": "Soluppgång",
     "timezone": "Tidszon",
     "no_visits": "Inga besök",
     "arrival_timezone": "Ankomsttidszon",
@@ -294,7 +253,6 @@
     "about": "Om AdventureLog",
     "adventures": "Äventyr",
     "collections": "Samlingar",
-    "discord": "Discord",
     "documentation": "Dokumentation",
     "greeting": "Hej",
     "logout": "Logga ut",
@@ -305,16 +263,7 @@
     "settings": "Inställningar",
     "shared_with_me": "Delade med mig",
     "theme_selection": "Tema",
-    "themes": {
-      "aqua": "Aqua",
-      "dark": "Mörk",
-      "forest": "Skog",
-      "light": "Ljus",
-      "night": "Natt",
-      "aestheticDark": "Estetisk mörk",
-      "aestheticLight": "Estetiskt ljus",
-      "northernLights": "Norrsken"
-    },
+    "themes": {},
     "users": "Användare",
     "worldtravel": "Världsresor",
     "my_tags": "Mina taggar",
@@ -334,14 +283,12 @@
     "not_visited": "Ej besökta",
     "num_countries": "länder hittades",
     "partially_visited": "Delvis besökta",
-    "all_visited": "Du har besökt alla regioner i",
     "cities": "städer",
     "failed_to_mark_visit": "Det gick inte att markera besök till",
     "failed_to_remove_visit": "Det gick inte att ta bort besök på",
     "marked_visited": "markerad som besökt",
     "no_cities_found": "Inga städer hittades",
     "region_failed_visited": "Det gick inte att markera regionen som besökt",
-    "region_stats": "Regionstatistik",
     "regions_in": "Regioner i",
     "removed": "tas bort",
     "view_cities": "Visa städer",
@@ -363,10 +310,7 @@
     "public_tooltip": "Med en offentlig profil kan användare dela samlingar med dig och se din profil på användarsidan.",
     "profile_picture": "Profilbild",
     "public_profile": "Offentlig profil",
-    "email_required": "E-post krävs",
-    "both_passwords_required": "Båda lösenorden krävs",
     "new_password": "Nytt lösenord",
-    "reset_failed": "Det gick inte att återställa lösenordet",
     "or_3rd_party": "Eller logga in med en tredjepartstjänst",
     "no_public_adventures": "Inga offentliga äventyr hittades",
     "no_public_collections": "Inga offentliga samlingar hittades",
@@ -379,7 +323,6 @@
   "settings": {
     "account_settings": "Användarkontoinställningar",
     "confirm_new_password": "Bekräfta nytt lösenord",
-    "current_email": "Aktuell e-post",
     "email_change": "Ändra e-post",
     "new_email": "Ny e-post",
     "new_password": "Nytt lösenord",
@@ -390,27 +333,18 @@
     "update_error": "Ett fel uppstod vid uppdatering av inställningar",
     "update_success": "Inställningarna har uppdaterats!",
     "change_password": "Ändra lösenord",
-    "invalid_token": "Token är ogiltig eller har gått ut",
-    "login_redir": "Du kommer då att omdirigeras till inloggningssidan.",
-    "missing_email": "Vänligen ange en e-postadress",
-    "password_does_not_match": "Lösenorden stämmer inte överens",
-    "password_is_required": "Lösenord krävs",
     "possible_reset": "Om e-postadressen du angav är kopplad till ett konto kommer du att få ett e-postmeddelande med instruktioner för att återställa ditt lösenord!",
     "reset_password": "Återställ lösenord",
-    "submit": "Skicka",
-    "token_required": "Token och UID krävs för lösenordsåterställning.",
     "about_this_background": "Om denna bakgrund",
     "join_discord": "Gå med i Discord",
     "join_discord_desc": "för att dela dina egna foton. \nLägg upp dem i",
     "photo_by": "Foto av",
-    "change_password_error": "Det gick inte att ändra lösenord. \nDet nuvarande eller det nya lösenordet är ogiltigt.",
     "current_password": "Aktuellt lösenord",
     "password_change_lopout_warning": "Du kommer att loggas ut efter att du har ändrat ditt lösenord.",
     "authenticator_code": "Autentiseringskod",
     "copy": "Kopiera",
     "disable_mfa": "Inaktivera MFA",
     "email_added": "E-post har lagts till!",
-    "email_added_error": "Det gick inte att lägga till e-post",
     "email_removed": "E-post har tagits bort!",
     "email_removed_error": "Det gick inte att ta bort e-post",
     "email_set_primary": "E-post har angetts som primärt!",
@@ -420,16 +354,12 @@
     "email_verified_error": "Fel vid verifiering av e-post",
     "email_verified_success": "Din e-postadress har verifierats. \nDu kan nu logga in.",
     "enable_mfa": "Aktivera MFA",
-    "error_change_password": "Fel vid byte av lösenord. \nKontrollera ditt nuvarande lösenord och försök igen.",
     "generic_error": "Ett fel uppstod när din begäran bearbetades.",
-    "invalid_code": "Ogiltig MFA-kod",
-    "invalid_credentials": "Ogiltigt användarnamn eller lösenord",
     "make_primary": "Gör Primär",
     "mfa_disabled": "Multifaktorautentisering har inaktiverats!",
     "mfa_enabled": "Multifaktorautentisering har aktiverats!",
     "mfa_not_enabled": "MFA är inte aktiverat",
     "mfa_page_title": "Multifaktorautentisering",
-    "mfa_required": "Flerfaktorsautentisering krävs",
     "no_emai_set": "Ingen e-post inställd",
     "not_verified": "Ej verifierad",
     "primary": "Primär",
@@ -440,25 +370,13 @@
     "verify": "Kontrollera",
     "verify_email_error": "Fel vid verifiering av e-post. \nFörsök igen om några minuter.",
     "verify_email_success": "E-postverifiering har skickats!",
-    "add_email_blocked": "Du kan inte lägga till en e-postadress till ett konto som skyddas av tvåfaktorsautentisering.",
-    "required": "Detta fält är obligatoriskt",
-    "csrf_failed": "Det gick inte att hämta CSRF-token",
-    "duplicate_email": "Den här e-postadressen används redan.",
-    "email_taken": "Den här e-postadressen används redan.",
-    "username_taken": "Detta användarnamn används redan.",
-    "administration_settings": "Administrationsinställningar",
     "documentation_link": "Dokumentationslänk",
     "launch_account_connections": "Starta kontoanslutningar",
     "launch_administration_panel": "Starta administrationspanelen",
     "no_verified_email_warning": "Du måste ha en verifierad e-postadress för att aktivera tvåfaktorsautentisering.",
     "social_auth_desc": "Aktivera eller inaktivera sociala och OIDC-autentiseringsleverantörer för ditt konto. \nDessa anslutningar gör att du kan logga in med leverantörer av autentiseringsidentitetsidentitet som är värd för dig som Authentik eller tredjepartsleverantörer som GitHub.",
     "social_auth_desc_2": "Dessa inställningar hanteras i AdventureLog-servern och måste aktiveras manuellt av administratören.",
-    "social_oidc_auth": "Social och OIDC-autentisering",
     "add_email": "Lägg till e-post",
-    "password_too_short": "Lösenordet måste bestå av minst 6 tecken",
-    "disable_password": "Inaktivera lösenord",
-    "password_disable": "Inaktivera lösenordsautentisering",
-    "password_disable_desc": "Inaktivering av lösenordsautentisering förhindrar dig att logga in med ett lösenord. \nDu måste använda en social eller OIDC-leverantör för att logga in. Om din sociala leverantör lossnar kommer lösenordsautentisering automatiskt att aktiveras även om den här inställningen är inaktiverad.",
     "password_disable_warning": "För närvarande är lösenordsautentisering inaktiverad. \nLogga in via en social eller OIDC -leverantör krävs.",
     "password_disabled": "Lösenordsautentisering inaktiverad",
     "password_disabled_error": "Fel Inaktivera lösenordsautentisering. \nSe till att en social eller OIDC -leverantör är länkad till ditt konto.",
@@ -477,7 +395,6 @@
     "advanced_settings_desc": "Avancerade konfigurations- och utvecklingsverktyg",
     "all_rights_reserved": "Alla rättigheter reserverade.",
     "app_version": "Appversion",
-    "confirm_new_password_desc": "Bekräfta nytt lösenord",
     "connected": "Ansluten",
     "debug_information": "Felsökningsinformation",
     "disabled": "Funktionshindrad",
@@ -514,31 +431,24 @@
     "social_auth_desc_1": "Hantera sociala inloggningsalternativ och lösenordsinställningar",
     "social_auth_setup": "Social autentiseringsinställning",
     "staff_status": "Personalstatus",
-    "staff_user": "Personalanvändare",
-    "email_verified_error_desc": "Ditt e -postmeddelande kunde inte verifieras. \nFörsök igen."
+    "staff_user": "Personalanvändare"
   },
   "checklist": {
-    "add_item": "Lägg till objekt",
     "checklist_delete_error": "Ett fel uppstod vid borttagning av checklista",
     "checklist_deleted": "Checklistan har raderats!",
     "checklist_editor": "Redigerare för checklistor",
     "checklist_public": "Den här checklistan är offentlig eftersom den finns i en offentlig samling.",
-    "editing_checklist": "Redigerar checklista",
-    "failed_to_save": "Det gick inte att spara checklistan",
     "item": "Punkt",
     "item_already_exists": "Listobjektet finns redan",
     "item_cannot_be_empty": "Listobjektet får inte vara tomt",
     "items": "Punkter",
     "new_item": "Nytt föremål",
-    "save": "Spara",
-    "checklist_viewer": "Se Checklista",
     "new_checklist": "Ny checklista"
   },
   "collection": {
     "collection_created": "Samlingen har skapats!",
     "collection_edit_success": "Samlingen har redigerats!",
     "create": "Skapa",
-    "edit_collection": "Redigera samling",
     "error_creating_collection": "Det gick inte att skapa samlingen",
     "error_editing_collection": "Ett fel uppstod vid redigering av samling",
     "new_collection": "Ny samling",
@@ -560,12 +470,8 @@
     "note_viewer": "Note Viewer"
   },
   "transportation": {
-    "date_and_time": "Datum",
-    "date_time": "Startdatum",
     "edit": "Redigera",
     "edit_transportation": "Redigera transport",
-    "end_date_time": "Slutdatum",
-    "error_editing_transportation": "Fel vid redigering av transport",
     "flight_number": "Flygnummer",
     "from_location": "Från plats",
     "modes": {
@@ -579,14 +485,9 @@
       "walking": "Gående"
     },
     "new_transportation": "Nya transporter",
-    "provide_start_date": "Ange ett startdatum",
-    "start": "Start",
     "to_location": "Till Plats",
-    "transport_type": "Transporttyp",
-    "transportation_added": "Transport har lagts till!",
     "transportation_delete_error": "Det gick inte att ta bort transport",
     "transportation_deleted": "Transporten har raderats!",
-    "transportation_edit_success": "Transporten har redigerats!",
     "type": "Typ",
     "ending_airport_desc": "Ange slut på flygplatskoden (t.ex. LAX)",
     "fetch_location_information": "Hämta platsinformation",
@@ -634,7 +535,6 @@
     "no_categories_found": "Inga kategorier hittades.",
     "select_category": "Välj Kategori",
     "update_after_refresh": "Äventyrskorten kommer att uppdateras när du uppdaterar sidan.",
-    "add_category": "Lägg till kategori",
     "add_new_category": "Lägg till en ny kategori"
   },
   "dashboard": {
@@ -651,25 +551,14 @@
     "api_key": "Immich API-nyckel",
     "api_note": "Obs: detta måste vara URL:en till Immich API-servern så den slutar troligen med /api om du inte har en anpassad konfiguration.",
     "disable": "Inaktivera",
-    "enable_immich": "Aktivera Immich",
-    "imageid_required": "Bild-ID krävs",
     "immich": "Immich",
-    "immich_desc": "Integrera ditt Immich-konto med AdventureLog så att du kan söka i ditt fotobibliotek och importera bilder för dina äventyr.",
     "immich_disabled": "Immich-integrationen inaktiverades framgångsrikt!",
-    "immich_enabled": "Immich-integrationen har aktiverats framgångsrikt!",
     "immich_error": "Fel vid uppdatering av Immich-integration",
-    "immich_integration": "Immich Integration",
-    "immich_updated": "Immich-inställningarna har uppdaterats framgångsrikt!",
-    "integration_enabled": "Integration aktiverad",
     "integration_fetch_error": "Fel vid hämtning av data från Immich-integrationen",
-    "integration_missing": "Immich-integrationen saknas i backend",
     "load_more": "Ladda mer",
     "no_items_found": "Inga föremål hittades",
-    "query_required": "Fråga krävs",
-    "server_down": "Immich-servern är för närvarande nere eller kan inte nås",
     "server_url": "Immich Server URL",
     "update_integration": "Uppdatera integration",
-    "documentation": "Immich Integrationsdokumentation",
     "localhost_note": "Obs: localhost kommer sannolikt inte att fungera om du inte har konfigurerat docker-nätverk i enlighet med detta. \nDet rekommenderas att använda serverns IP-adress eller domännamnet.",
     "api_key_placeholder": "Ange din immich API -nyckel",
     "enable_integration": "Aktivera integration",
@@ -685,15 +574,10 @@
     "validation_error": "Ett fel inträffade vid validering av den immich integrationen. \nKontrollera din server -URL- och API -nyckel."
   },
   "recomendations": {
-    "address": "Adress",
-    "contact": "Kontakta",
-    "phone": "Telefon",
     "recommendation": "Rekommendation",
-    "website": "Webbplats",
     "recommendations": "Rekommendationer",
     "adventure_recommendations": "Äventyrsrekommendationer",
     "food": "Mat",
-    "miles": "Miles",
     "tourism": "Turism"
   },
   "lodging": {
@@ -701,30 +585,17 @@
     "bnb": "Säng och frukost",
     "cabin": "Stuga",
     "campground": "Campingplats",
-    "error_editing_lodging": "Felredigeringsbefäl",
     "hostel": "Vandrarhem",
     "hotel": "Hotell",
     "house": "Hus",
-    "lodging_added": "Logi tillagd framgångsrikt!",
-    "lodging_delete_error": "Felladering logi",
-    "lodging_deleted": "Logga raderas framgångsrikt!",
-    "lodging_edit_success": "LOGGE Redigerad framgångsrikt!",
-    "lodging_type": "Logi",
     "motel": "Motell",
     "new_lodging": "Inställning",
     "other": "Andra",
-    "provide_start_date": "Vänligen ange ett startdatum",
     "reservation_number": "Bokningsnummer",
     "resort": "Tillflykt",
-    "start": "Start",
-    "type": "Typ",
     "villa": "Villa",
-    "check_in": "Checka in",
-    "check_out": "Checka ut",
-    "date_and_time": "Datum",
     "edit": "Redigera",
-    "edit_lodging": "Redigera logi",
-    "current_timezone": "Nuvarande tidszon"
+    "edit_lodging": "Redigera logi"
   },
   "google_maps": {
     "google_maps_integration_desc": "Anslut ditt Google Maps-konto för att få sökresultat och rekommendationer av hög kvalitet."
