--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -3,7 +3,6 @@
     "about": "关于冒险日志",
     "adventures": "冒险",
     "collections": "收藏",
-    "discord": "不和谐",
     "documentation": "文档",
     "greeting": "你好",
     "logout": "退出",
@@ -14,16 +13,7 @@
     "settings": "设置",
     "shared_with_me": "与我分享",
     "theme_selection": "主题选择",
-    "themes": {
-      "aqua": "阿夸",
-      "dark": "黑暗的",
-      "forest": "森林",
-      "light": "光",
-      "night": "夜晚",
-      "aestheticDark": "审美黑暗",
-      "aestheticLight": "美学之光",
-      "northernLights": "北极光"
-    },
+    "themes": {},
     "users": "用户",
     "worldtravel": "环球旅行",
     "my_tags": "我的标签",
@@ -82,9 +72,7 @@
     "not_found": "未找到冒险",
     "not_found_desc": "未找到你要查找的冒险。请尝试其他冒险或稍后再试。",
     "homepage": "主页",
-    "adventure_details": "冒险详情",
     "collection": "合集",
-    "adventure_type": "冒险类型",
     "longitude": "经度",
     "latitude": "纬度",
     "visit": "访问",
@@ -106,10 +94,8 @@
     "date_constrain": "限制在合集日期内",
     "rating": "评分",
     "my_images": "我的图片",
-    "add_an_activity": "添加活动",
     "show_region_labels": "显示区域标签",
     "no_images": "没有图片",
-    "upload_images_here": "在此上传图片",
     "share_adventure": "分享此冒险！",
     "copy_link": "复制链接",
     "image": "图片",
@@ -124,7 +110,6 @@
     "add": "添加",
     "save_next": "保存并继续",
     "end_date": "结束日期",
-    "my_visits": "我的访问",
     "start_date": "开始日期",
     "remove": "移除",
     "location": "位置",
@@ -136,8 +121,6 @@
     "attachments": "附件",
     "attachment": "附件",
     "images": "图片",
-    "primary": "主要",
-    "view_attachment": "查看附件",
     "generate_desc": "生成描述",
     "public_adventure": "公开冒险",
     "location_information": "位置信息",
@@ -149,11 +132,9 @@
     "filter": "过滤",
     "category_filter": "类别过滤器",
     "category": "类别",
-    "select_adventure_category": "选择冒险类别",
     "clear": "清除",
     "my_collections": "我的合集",
     "open_filters": "打开过滤器",
-    "close_filters": "关闭过滤器",
     "archived_collections": "已归档合集",
     "share": "分享",
     "private": "私密",
@@ -169,7 +150,6 @@
     "delete_collection_success": "成功删除合集！",
     "delete_collection_warning": "你确定要删除此合集吗？这将同时删除所有链接的冒险。此操作无法撤销。",
     "cancel": "取消",
-    "of": "/",
     "delete_collection": "删除合集",
     "delete_adventure": "删除冒险",
     "adventure_delete_success": "成功删除冒险！",
@@ -185,13 +165,10 @@
     "dates": "日期",
     "wiki_image_error": "从维基百科获取图片时出错",
     "start_before_end_error": "开始日期必须在结束日期之前",
-    "activity": "活动",
     "actions": "操作",
-    "no_end_date": "请输入结束日期",
     "see_adventures": "查看冒险",
     "image_fetch_failed": "获取图片失败",
     "no_location": "请输入位置",
-    "no_start_date": "请输入开始日期",
     "no_description_found": "未找到描述",
     "adventure_created": "冒险已创建",
     "adventure_create_error": "创建冒险失败",
@@ -207,7 +184,6 @@
     "display_name": "显示名称",
     "adventure_not_found": "没找到任何冒险。使用右下角的加号按钮添加一些，或尝试更改筛选条件！",
     "no_adventures_found": "未找到冒险",
-    "mark_region_as_visited": "将地区 {region}, {country} 标记为已访问？",
     "mark_visited": "标记为已访问",
     "error_updating_regions": "更新地区时出错",
     "regions_updated": "地区已更新",
@@ -247,7 +223,6 @@
     "will_be_marked": "将在冒险保存后标记为已访问。",
     "start": "开始",
     "end": "结束",
-    "show_map": "显示地图",
     "emoji_picker": "表情符号选择器",
     "download_calendar": "下载日历",
     "date_information": "日期信息",
@@ -267,32 +242,8 @@
     "attachment_update_success": "附件更新成功！",
     "attachment_name": "附件名称",
     "gpx_tip": "上传 GPX 文件到附件以便在地图上查看它们！",
-    "welcome_map_info": "该服务器上的公共冒险",
     "attachment_update_error": "更新附件时出错",
-    "activities": {
-      "general": "通用 🌍",
-      "outdoor": "户外 🏞️",
-      "lodging": "住宿 🛌",
-      "dining": "餐饮 🍽️",
-      "activity": "活动 🏄",
-      "attraction": "景点 🎢",
-      "shopping": "购物 🛍️",
-      "nightlife": "夜生活 🌃",
-      "event": "活动 🎉",
-      "transportation": "交通 🚗",
-      "culture": "文化 🎭",
-      "water_sports": "水上运动 🚤",
-      "hiking": "徒步旅行 🥾",
-      "wildlife": "野生动物 🦒",
-      "historical_sites": "历史遗址 🏛️",
-      "music_concerts": "音乐与演唱会 🎶",
-      "fitness": "健身 🏋️",
-      "art_museums": "艺术与博物馆 🎨",
-      "festivals": "节日 🎪",
-      "spiritual_journeys": "精神之旅 🧘‍♀️",
-      "volunteer_work": "志愿者工作 🤝",
-      "other": "其他"
-    },
+    "activities": {},
     "lodging_information": "住宿信息",
     "price": "价格",
     "reservation_number": "预订号",
@@ -302,9 +253,7 @@
     "date_itinerary": "日期行程",
     "no_ordered_items": "将带有日期的项目添加到集合中，以便在此处查看它们。",
     "ordered_itinerary": "订购了行程",
-    "additional_info": "附加信息",
     "invalid_date_range": "无效的日期范围",
-    "sunrise_sunset": "日出",
     "timezone": "时区",
     "no_visits": "没有访问",
     "arrival_timezone": "到达时区",
@@ -339,10 +288,7 @@
     "profile_picture": "头像",
     "public_profile": "公开资料",
     "public_tooltip": "通过公开个人资料，用户可以与您共享合集，并在用户页面查看您的资料。",
-    "email_required": "电子邮件为必填项",
-    "both_passwords_required": "两个密码都是必填项",
     "new_password": "新密码（6个字符以上）",
-    "reset_failed": "重置密码失败",
     "or_3rd_party": "或使用第三方服务登录",
     "no_public_adventures": "未找到公开冒险",
     "no_public_collections": "未找到公开合集",
@@ -359,14 +305,12 @@
     "not_visited": "未访问过",
     "num_countries": "找到的国家",
     "partially_visited": "部分访问",
-    "all_visited": "您已访问过所有地区",
     "cities": "城市",
     "failed_to_mark_visit": "无法标记访问",
     "failed_to_remove_visit": "无法删除对的访问",
     "marked_visited": "标记为已访问",
     "no_cities_found": "没有找到城市",
     "region_failed_visited": "无法将区域标记为已访问",
-    "region_stats": "地区统计",
     "regions_in": "地区位于",
     "removed": "已删除",
     "view_cities": "查看城市",
@@ -379,7 +323,6 @@
   "settings": {
     "account_settings": "用户账户设置",
     "confirm_new_password": "确认新密码",
-    "current_email": "当前邮箱",
     "email_change": "更改邮箱",
     "new_email": "新邮箱",
     "new_password": "新密码",
@@ -390,27 +333,18 @@
     "update_error": "更新设置时出错",
     "update_success": "设置更新成功！",
     "change_password": "更改密码",
-    "invalid_token": "令牌无效或已过期",
-    "login_redir": "修改后将跳转至登录页面。",
-    "missing_email": "请输入邮箱地址",
-    "password_does_not_match": "密码不匹配",
-    "password_is_required": "需要密码",
     "possible_reset": "若提供的邮箱与账户关联，您将收到包含重置说明的邮件！",
     "reset_password": "重置密码",
-    "submit": "提交",
-    "token_required": "密码重置需提供令牌和用户ID。",
     "about_this_background": "关于此背景",
     "join_discord": "加入 Discord",
     "join_discord_desc": "分享您的照片，请发布到 #travel-share 频道。",
     "photo_by": "摄影師：",
-    "change_password_error": "无法更改密码。\n当前密码无效或新密码无效。",
     "current_password": "当前密码",
     "password_change_lopout_warning": "修改密码后需重新登录。",
     "authenticator_code": "验证码",
     "copy": "复制",
     "disable_mfa": "禁用 MFA",
     "email_added": "邮箱添加成功！",
-    "email_added_error": "添加邮箱时出错",
     "email_removed": "邮箱删除成功！",
     "email_removed_error": "删除邮箱时出错",
     "email_set_primary": "已设为主邮箱",
@@ -420,16 +354,12 @@
     "email_verified_error": "验证邮箱时出错",
     "email_verified_success": "您的邮箱已被验证。\n您现在可以登录了。",
     "enable_mfa": "启用 MFA",
-    "error_change_password": "更改密码时出错。\n请检查当前密码或新密码格式。",
     "generic_error": "处理请求时发生错误。",
-    "invalid_code": "MFA 代码无效",
-    "invalid_credentials": "用户名或密码无效",
     "make_primary": "设为主邮箱",
     "mfa_disabled": "多重身份验证已成功禁用！",
     "mfa_enabled": "多重身份验证启用成功！",
     "mfa_not_enabled": "MFA 未启用",
     "mfa_page_title": "多重身份验证",
-    "mfa_required": "需要多重身份验证",
     "no_emai_set": "没有设置邮箱",
     "not_verified": "未验证",
     "primary": "主邮箱",
@@ -440,25 +370,13 @@
     "verify": "验证",
     "verify_email_error": "验证邮箱时出错。\n几分钟后重试。",
     "verify_email_success": "邮箱验证发送成功！",
-    "add_email_blocked": "无法为启用多重身份验证的账户添加邮箱。",
-    "required": "此字段为必填项",
-    "csrf_failed": "获取 CSRF 令牌失败",
-    "duplicate_email": "该邮箱已被使用。",
-    "email_taken": "该邮箱已被使用。",
-    "username_taken": "该用户名已被使用。",
-    "administration_settings": "管理设置",
     "documentation_link": "文档链接",
     "launch_account_connections": "管理账户连接",
     "launch_administration_panel": "进入管理面板",
     "no_verified_email_warning": "您必须拥有已验证的邮箱地址才能启用多重身份验证。",
     "social_auth_desc": "为您的帐户启用或禁用社交和 OIDC 身份验证提供商。\n这些连接允许您使用自托管身份验证身份提供商（如 Authentik）或第三方提供商（如 GitHub）登录。",
     "social_auth_desc_2": "这些设置在 AdventureLog 服务器中进行管理，并且必须由管理员手动启用。",
-    "social_oidc_auth": "社交与 OIDC 认证",
     "add_email": "添加邮箱",
-    "password_too_short": "密码必须至少为 6 个字符",
-    "disable_password": "禁用密码",
-    "password_disable": "禁用密码身份验证",
-    "password_disable_desc": "禁用密码身份验证将阻止您使用密码登录。\n您将需要使用社交或OIDC提供商登录。如果您的社交提供商未链接，即使禁用了此设置，密码身份验证也将自动重新启用。",
     "password_disable_warning": "当前，密码身份验证已禁用。\n需要通过社交或OIDC提供商登录。",
     "password_disabled": "密码身份验证禁用",
     "password_disabled_error": "错误禁用密码身份验证。\n确保将社交或OIDC提供商链接到您的帐户。",
@@ -477,7 +395,6 @@
     "advanced_settings_desc": "高级配置和开发工具",
     "all_rights_reserved": "版权所有。",
     "app_version": "应用版本",
-    "confirm_new_password_desc": "确认新密码",
     "connected": "连接",
     "debug_information": "调试信息",
     "disabled": "禁用",
@@ -514,31 +431,24 @@
     "staff_user": "员工用户",
     "quick_actions": "快速动作",
     "region_updates": "区域更新",
-    "region_updates_desc": "更新访问了地区和城市",
-    "email_verified_error_desc": "无法验证您的电子邮件。\n请重试。"
+    "region_updates_desc": "更新访问了地区和城市"
   },
   "checklist": {
-    "add_item": "添加项目",
     "checklist_delete_error": "删除清单时出错",
     "checklist_deleted": "清单删除成功！",
     "checklist_editor": "清单编辑器",
     "checklist_public": "此清单因位于公开合集中而自动公开。",
-    "editing_checklist": "正在编辑清单",
-    "failed_to_save": "保存清单失败",
     "item": "项目",
     "item_already_exists": "项目已存在",
     "item_cannot_be_empty": "项目内容不能为空",
     "items": "项目",
     "new_item": "新项目",
-    "save": "保存",
-    "checklist_viewer": "清单查看器",
     "new_checklist": "新建清单"
   },
   "collection": {
     "collection_created": "合集创建成功！",
     "collection_edit_success": "合集编辑成功！",
     "create": "创建",
-    "edit_collection": "编辑合集",
     "error_creating_collection": "创建合集时出错",
     "error_editing_collection": "编辑合集时出错",
     "new_collection": "新建合集",
@@ -560,12 +470,8 @@
     "note_viewer": "笔记查看器"
   },
   "transportation": {
-    "date_and_time": "日期和时间",
-    "date_time": "开始日期和时间",
     "edit": "编辑",
     "edit_transportation": "编辑交通信息",
-    "end_date_time": "结束日期",
-    "error_editing_transportation": "编辑交通信息时出错",
     "flight_number": "航班号",
     "from_location": "出发地",
     "modes": {
@@ -579,14 +485,9 @@
       "walking": "步行"
     },
     "new_transportation": "新交通信息",
-    "provide_start_date": "请提供开始日期",
-    "start": "开始",
     "to_location": "目的地",
-    "transport_type": "运输类型",
-    "transportation_added": "交通信息添加成功！",
     "transportation_delete_error": "删除交通信息时出错",
     "transportation_deleted": "交通信息删除成功！",
-    "transportation_edit_success": "交通信息编辑成功！",
     "type": "类型",
     "ending_airport_desc": "输入到达机场代码（如：LAX）",
     "fetch_location_information": "获取位置信息",
@@ -634,7 +535,6 @@
     "no_categories_found": "未找到类别。",
     "select_category": "选择类别",
     "update_after_refresh": "刷新页面后，冒险卡将更新。",
-    "add_category": "添加类别",
     "add_new_category": "添加新类别"
   },
   "dashboard": {
@@ -651,25 +551,14 @@
     "api_key": "Immich API 密钥",
     "api_note": "注意：这必须是 Immich API 服务器的 URL，因此它可能以 /api 结尾，除非您有自定义配置。",
     "disable": "禁用",
-    "enable_immich": "启用 Immich",
-    "imageid_required": "需要图像 ID",
     "immich": "Immich",
-    "immich_desc": "将您的 Immich 帐户与 AdventureLog 集成，以便您搜索照片库并导入冒险照片。",
     "immich_disabled": "Immich 集成成功禁用！",
-    "immich_enabled": "Immich 集成成功启用！",
     "immich_error": "更新 Immich 集成时出错",
-    "immich_integration": "Immich 整合",
-    "immich_updated": "Immich 设置更新成功！",
-    "integration_enabled": "启用集成",
     "integration_fetch_error": "从 Immich 集成获取数据时出错",
-    "integration_missing": "后端缺少 Immich 集成",
     "load_more": "加载更多",
     "no_items_found": "未找到物品",
-    "query_required": "需要查询",
-    "server_down": "Immich 服务器当前已关闭或无法访问",
     "server_url": "Immich 服务器网址",
     "update_integration": "更新集成",
-    "documentation": "Immich 集成文档",
     "localhost_note": "注意：除非您相应地设置了 docker 网络，否则 localhost 很可能无法工作。\n建议使用服务器的IP地址或域名。",
     "api_key_placeholder": "输入您的Immich API密钥",
     "enable_integration": "启用集成",
@@ -685,46 +574,28 @@
     "validation_error": "在验证IMMICH集成时发生了错误。\n请检查您的服务器URL和API键。"
   },
   "recomendations": {
-    "address": "地址",
-    "contact": "联系方式",
-    "phone": "电话",
     "recommendation": "推荐",
-    "website": "网站",
     "recommendations": "建议",
     "adventure_recommendations": "冒险建议",
     "food": "食物",
-    "miles": "英里",
     "tourism": "旅游"
   },
   "lodging": {
     "campground": "露营地",
-    "check_in": "入住",
-    "check_out": "退房",
-    "date_and_time": "日期和时间",
     "edit": "编辑",
     "edit_lodging": "编辑住宿",
-    "error_editing_lodging": "编辑住宿时出错",
     "hostel": "旅馆",
     "hotel": "酒店",
     "house": "房子",
-    "lodging_added": "住宿添加成功！",
-    "lodging_delete_error": "删除住宿时出错",
-    "lodging_deleted": "住宿删除成功！",
-    "lodging_edit_success": "住宿编辑成功！",
-    "lodging_type": "住宿类型",
     "motel": "汽车旅馆",
-    "start": "开始",
-    "type": "类型",
     "villa": "别墅",
     "apartment": "公寓",
     "bnb": "民宿",
     "cabin": "仓房",
     "new_lodging": "新住宿",
     "other": "其他",
-    "provide_start_date": "请提供开始日期",
     "reservation_number": "预订号",
-    "resort": "度假村",
-    "current_timezone": "当前时区"
+    "resort": "度假村"
   },
   "google_maps": {
     "google_maps_integration_desc": "连接您的Google Maps帐户以获取高质量的位置搜索结果和建议。"
